--- a/styles/admin.css
+++ b/styles/admin.css
@@ -4,17 +4,13 @@
     width: 100%;
 }
 
-html{
-    height: 100%;
-}
-
 body{
     font-family: sans-serif;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     margin: 0;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .header{
@@ -26,7 +22,7 @@ body{
 
 .header-1{
     width: 50%;
-    padding: 15px;
+    padding: 20px;
     display: flex;
     flex-direction: row;
 }
@@ -34,13 +30,12 @@ body{
 .header-2{
     width: 50%;
     text-align: right;
-    padding: 10px;
+    padding: 20px;
 }
 
 .role{
-    margin-left: 20px;
-    font-weight: 700;
-    color: rgb(0, 0, 0);
+    font-weight: 900;
+    padding-left: 30px;
 }
 
 .button-2{
