--- a/styles/employees.css
+++ b/styles/employees.css
@@ -15,11 +15,12 @@ body{
     width: 100%;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .header-1{
     width: 50%;
-    padding: 30px;
+    padding: 20px;
     display: flex;
     flex-direction: row;
 }
@@ -27,7 +28,7 @@ body{
 .header-2{
     width: 50%;
     text-align: right;
-    padding: 30px;
+    padding: 20px;
 }
 
 .role2{
@@ -69,10 +70,19 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     padding-bottom: 20px;
     padding-top: 10px;
+}
+
+.div2{
+    width: 100%;
+}
+
+.div2-2{
+    width: 100%;
+    margin-top: 20px;
 }
 
 .name{
@@ -82,7 +92,8 @@ body{
 }
 
 .role{
-    color: white;
+    color: rgb(255, 255, 255);
+    padding: 0;
 }
 
 .button{
