--- a/styles/works.css
+++ b/styles/works.css
@@ -20,7 +20,7 @@ body{
 
 .header-1{
     width: 50%;
-    padding: 15px;
+    padding: 20px;
     display: flex;
     flex-direction: row;
 }
@@ -28,7 +28,7 @@ body{
 .header-2{
     width: 50%;
     text-align: right;
-    padding: 10px;
+    padding: 20px;
 }
 
 .role{
@@ -67,6 +67,15 @@ body{
     /* opacity: 60%; */
 }
 
+.div2{
+    width: 100%;
+}
+
+.div2-2{
+    width: 100%;
+    margin-top: 20px;
+}
+
 .container3{
     width: 50%;
     background-color: rgb(0, 88, 0);
@@ -86,7 +95,7 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     margin-top: 20px;
 }
 
@@ -168,6 +177,10 @@ body{
 @media  screen and (max-width: 800px) {
     .button-2{
         width: 50%;
+    }
+
+    .container5{
+        flex-direction: column;
     }
 }
 
