--- a/styles/admin.css
+++ b/styles/admin.css
@@ -127,13 +127,43 @@ body{
 
 /* FOOTER */
 
-footer{
+.footer{
     background-color: rgb(0, 85, 20);
     color: white;
-    text-align: center;
     padding: 1em;
     margin-top: 30px;
     font-weight: 700;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+}
+
+.ft1{
+    width: 50%;
+    text-align: left;
+}
+
+.ft2{
+    width: 50%;
+    text-align: right;
+}
+
+.ft3{
+    color: rgb(157, 157, 157);
+    text-decoration: underline;
+    cursor: pointer;
+    background-color: transparent;
+    border: 0;
+}
+
+.imgFooter{
+    padding-left: 30px;
+}
+
+.imgFooter:hover{
+    transform: scale(1.1);
+    transition: 0.3s;
 }
 
 /* MARGIN */
