--- a/styles/works.css
+++ b/styles/works.css
@@ -165,11 +165,42 @@ body{
 /* FOOTER */
 
 .footer{
-    text-align: center;
-    margin-top: auto;
-    background-color: rgb(0, 88, 0);
-    font-weight: 900;
+    background-color: rgb(0, 85, 20);
     color: white;
+    padding: 1em;
+    margin-top: 30px;
+    font-weight: 700;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+}
+
+.ft1{
+    width: 50%;
+    text-align: left;
+}
+
+.ft2{
+    width: 50%;
+    text-align: right;
+}
+
+.ft3{
+    color: rgb(157, 157, 157);
+    text-decoration: underline;
+    cursor: pointer;
+    background-color: transparent;
+    border: 0;
+}
+
+.imgFooter{
+    padding-left: 30px;
+}
+
+.imgFooter:hover{
+    transform: scale(1.1);
+    transition: 0.3s;
 }
 
 /* RESPONSIVE */
