--- a/styles/portada.css
+++ b/styles/portada.css
@@ -69,6 +69,13 @@ html, body{
     color: rgb(195, 195, 195);
 }
 
+.msgError{
+    color: red;
+    font-size: 0.8em;
+    margin-top: 10px;
+    display: none;
+}
+
 /* RESPONSIVE */
 
 @media  screen and (max-width: 1100px) {
