--- a/styles/addWork.css
+++ b/styles/addWork.css
@@ -127,12 +127,18 @@ body{
 }
 
 .ft1{
-    width: 50%;
+    width: 33.33%;
     text-align: left;
 }
 
+.ft4{
+    width: 33.33%;
+    text-align: center;
+    font-size: 0.8em;
+}
+
 .ft2{
-    width: 50%;
+    width: 33.33%;
     text-align: right;
 }
 
@@ -169,6 +175,28 @@ body{
     .button-2{
         width: 50%;
     }
+
+    .footer{
+        flex-direction: column;
+    }
+
+    .ft1{
+        width: 100%;
+        text-align: center;
+    }
+
+    .ft4{
+        width: 100%;
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .ft2{
+        width: 100%;
+        text-align: center;
+        margin-top: 10px;
+    }
+
 }
 
 @media  screen and (max-width: 500px) {
@@ -200,4 +228,5 @@ body{
     .role2{
         display: none;
     }
+
 }
