--- a/styles/admin.css
+++ b/styles/admin.css
@@ -131,7 +131,7 @@ body{
     background-color: rgb(0, 85, 20);
     color: white;
     padding: 1em;
-    margin-top: 30px;
+    margin-top: 10px;
     font-weight: 700;
     display: flex;
     flex-direction: row;
@@ -140,12 +140,18 @@ body{
 }
 
 .ft1{
-    width: 50%;
+    width: 33.33%;
     text-align: left;
 }
 
+.ft4{
+    width: 33.33%;
+    text-align: center;
+    font-size: 0.8em;
+}
+
 .ft2{
-    width: 50%;
+    width: 33.33%;
     text-align: right;
 }
 
@@ -176,6 +182,30 @@ body{
     .div2{
         height: 700px;
     }
+}
+
+@media  screen and (max-width: 800px) {
+    .footer{
+        flex-direction: column;
+    }
+
+    .ft1{
+        width: 100%;
+        text-align: center;
+    }
+
+    .ft4{
+        width: 100%;
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .ft2{
+        width: 100%;
+        text-align: center;
+        margin-top: 10px;
+    }
+
 }
 
 @media  screen and (max-width: 600px) {
