--- a/styles/employees.css
+++ b/styles/employees.css
@@ -147,12 +147,18 @@ body{
 }
 
 .ft1{
-    width: 50%;
+    width: 33.33%;
     text-align: left;
 }
 
+.ft4{
+    width: 33.33%;
+    text-align: center;
+    font-size: 0.8em;
+}
+
 .ft2{
-    width: 50%;
+    width: 33.33%;
     text-align: right;
 }
 
@@ -183,6 +189,30 @@ body{
     .button-2{
         width: 50%;
     }
+}
+
+@media  screen and (max-width: 800px) {
+    .footer{
+        flex-direction: column;
+    }
+
+    .ft1{
+        width: 100%;
+        text-align: center;
+    }
+
+    .ft4{
+        width: 100%;
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .ft2{
+        width: 100%;
+        text-align: center;
+        margin-top: 10px;
+    }
+
 }
 
 @media only screen and (max-width: 600px) {
