--- a/styles/gestor.css
+++ b/styles/gestor.css
@@ -77,7 +77,7 @@ body{
 }
 
 .div1{
-    height: 100%;
+    /* height: 100%; */
     width: 50%;
     background-color: rgb(0, 85, 20);
     justify-content: center;
@@ -88,7 +88,7 @@ body{
 }
 
 .div2{
-    height: 100%;
+    /* height: 100%; */
     width: 50%;
     background-color: rgb(255, 255, 255);
     justify-content: center;
@@ -134,7 +134,7 @@ body{
     background-color: rgb(0, 85, 20);
     color: white;
     padding: 1em;
-    margin-top: 30px;
+    margin-top: 10px;
     font-weight: 700;
     display: flex;
     flex-direction: row;
