--- a/styles/myWorks.css
+++ b/styles/myWorks.css
@@ -156,12 +156,18 @@ body{
 }
 
 .ft1{
-    width: 50%;
+    width: 33.33%;
     text-align: left;
 }
 
+.ft4{
+    width: 33.33%;
+    text-align: center;
+    font-size: 0.8em;
+}
+
 .ft2{
-    width: 50%;
+    width: 33.33%;
     text-align: right;
 }
 
@@ -207,6 +213,27 @@ body{
 @media  screen and (max-width: 800px) {
     .button-2{
         width: 50%;
+    }
+
+    .footer{
+        flex-direction: column;
+    }
+
+    .ft1{
+        width: 100%;
+        text-align: center;
+    }
+
+    .ft4{
+        width: 100%;
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .ft2{
+        width: 100%;
+        text-align: center;
+        margin-top: 10px;
     }
 }
 
