--- a/styles/portada.css
+++ b/styles/portada.css
@@ -72,7 +72,8 @@ html, body{
 .msgError{
     color: red;
     font-size: 0.8em;
-    margin-top: 10px;
+    margin-top: 20px;
+    font-weight: bold;
     display: none;
 }
 
