--- a/styles/tecnic.css
+++ b/styles/tecnic.css
@@ -14,7 +14,7 @@ body{
     margin: 0;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .header{
@@ -77,7 +77,6 @@ body{
 }
 
 .div1{
-    height: 100%;
     width: 100%;
     background-color: rgb(0, 85, 20);
     justify-content: center;
@@ -85,6 +84,7 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
+    border: 100px solid white;
 }
 
 .myWorks{
@@ -110,7 +110,7 @@ body{
     background-color: rgb(0, 85, 20);
     color: white;
     padding: 1em;
-    margin-top: 30px;
+    margin-top: 10px;
     font-weight: 700;
     display: flex;
     flex-direction: row;
