--- a/styles/works.css
+++ b/styles/works.css
@@ -85,8 +85,8 @@ body{
 
 .container4{
     width: 50%;
-    background-color: white;
-    border: 1px solid rgb(0, 88, 0);
+    background-color: transparent;;
+    border: 0
 }
 
 .container5{
@@ -128,19 +128,19 @@ body{
 }
 
 .button{
-    background-color: white;
-    color: rgb(0, 88, 0);
+    background-color: rgb(0, 88, 0);
+    color: white;
     font-weight: 700;
-    border: 1px solid white;
+    border: 1px solid rgb(0, 88, 0);
     padding: 5px 10px;
     width: 30%;
     cursor: pointer;
 }
 
 .button:hover{
-    background-color: rgb(0, 88, 0);
-    color: white;
-    border: 1px solid white;
+    background-color: white;
+    color: rgb(0, 88, 0);
+    border: 1px solid rgb(0, 88, 0);
     transition: 0.3s;
 }
 
@@ -163,13 +163,14 @@ body{
 }
 
 .blink {
-    animation: blinker 0.5s linear infinite;
+    animation: blinker 2s linear infinite;
     outline: 5px solid red; /* cambia border por outline */
   }
   
   @keyframes blinker {
     50% {
       outline-color: red; /* cambia border-color por outline-color */
+      background-color: red;
     }
   }
 
