--- a/styles/works.css
+++ b/styles/works.css
@@ -64,6 +64,7 @@ body{
     align-items: center;
     flex-direction: row;
     margin-top: 30px;
+    border: 6px solid rgb(0, 88, 0);
 }
 
 .div2{
@@ -127,6 +128,12 @@ body{
     font-size: 0.8em;
 }
 
+.trabajador2{
+    color: white;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
 .button{
     background-color: rgb(0, 88, 0);
     color: white;
@@ -164,13 +171,11 @@ body{
 
 .blink {
     animation: blinker 2s linear infinite;
-    outline: 5px solid red; /* cambia border por outline */
   }
   
   @keyframes blinker {
     50% {
-      outline-color: red; /* cambia border-color por outline-color */
-      background-color: red;
+      background-color: rgb(255, 0, 0);
     }
   }
 
@@ -251,6 +256,10 @@ body{
         width: 100%;
         text-align: center;
         margin-top: 10px;
+    }
+
+    .button{
+        width: 80%;
     }
 }
 
