--- a/styles/myWorks.css
+++ b/styles/myWorks.css
@@ -109,21 +109,19 @@ body{
 }
 
 .status{
-    width: 56.5%;
+    width: 90%;
     background-color: rgb(0, 85, 20);
     color: white;
     border: 1px solid white;
     padding: 5px 15px;
-    margin-right: 20px;
 }
 
 .comment{
-    width: 50%;
+    width: 85%;
     background-color: rgb(0, 85, 20);
     color: white;
     border: 1px solid white;
     padding: 5px 15px;
-    margin-right: 20px;
 }
 
 .buttonTasca{
@@ -132,6 +130,8 @@ body{
     border: 1px solid rgb(0, 85, 20);
     width: 30%;
     cursor: pointer;
+    margin-bottom: 30px;
+    padding: 10px;
 }
 
 .buttonTasca:hover{
