--- a/styles/addWork.css
+++ b/styles/addWork.css
@@ -111,6 +111,19 @@ body{
     transition: 0.3s;
 }
 
+.msgError1{
+    color: red;
+    font-weight: bold;
+    display: none;
+}
+
+.msgError2{
+    color: red;
+    font-weight: bold;
+    display: none;
+}
+
+
 
 /* FOOTER */
 
